<resources>
    <string name="app_name">Cineverse</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_email">Enter email address</string>
    <string name="invalid_email">Invalid email entered</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_password">Your password must be at least 6 characters</string>
    <string name="invalid_repassword">Passwords are not the match</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_e_mail_address_we_ll_send_n_you_a_email_to_reset_your_password">Enter your e-mail address we\'ll send \n you a email to reset your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="create_new_account">Create new account</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="genre_title">Genre Title</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="home">Home</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="user_reg_succ_but">Registration was successful but failed to store session</string>
    <string name="user_reg_succ">User register successfully!</string>
    <string name="Invalid_authentication">Invalid authentication</string>
    <string name="Authentication_failed_Password">Authentication failed, Password should be at least 6 characters</string>
    <string name="Authentication_failed_invalid_email">Authentication failed, Invalid email entered</string>
    <string name="Authentication_failed_exsit_email">Authentication failed, Email already registered</string>
    <string name="Connecting">Connecting</string>
    <string name="Unknown_error_refreshing">Unknown error occurred, please try refreshing the app</string>
    <string name="Loading">Loading</string>
    <string name="Login">Login</string>
    <string name="Email_sent_succ">Email sent successfully to reset your password!</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="check_email_pass">Authentication failed, Check email and password</string>
</resources>