<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ui.forgotpassword.ForgotPasswordFragment"
    android:background="@drawable/popup_fragment_shape">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_e_mail_address_we_ll_send_n_you_a_email_to_reset_your_password"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="35dp"
            android:textStyle="bold"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/email"/>

        <EditText
            android:id="@+id/email_to_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_email"
            android:textColor="@color/white"
            android:textColorHint="#4B4B4B"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="12sp"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/bar_progress"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

<androidx.appcompat.widget.AppCompatButton
    android:id="@+id/reset_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:text="@string/reset_password"
    android:fontFamily="@font/poppins_medium"
    android:textColor="@color/white"
    android:gravity="center"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:textSize="15sp"
    android:background="@drawable/blue_border_rounded_corner"
    android:textAllCaps="false" />

</LinearLayout>