<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/app_logo"/>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#141414"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/black_border_rounded_corner"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/email"/>

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/email"
                android:textColorHint="#4B4B4B"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="-5dp"
                android:paddingLeft="20dp"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#121212"
            android:background="@drawable/black_border_rounded_corner"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="19dp"
                android:src="@drawable/password"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:textColorHint="#4B4B4B"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="-5dp"
                android:paddingLeft="20dp"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="12sp"/>

        </LinearLayout>
        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="80dp"
            android:text="@string/forgot_password"
            android:textColor="#0098FD"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/loginProgress"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/blue_border_rounded_corner"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/continue_as_guest"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="15sp"
            android:background="@drawable/blue_border_rounded_corner"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="100dp"
            android:background="#141414"/>

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:textSize="15sp"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>