<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:src="@drawable/app_logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColorHint="#4B4B4B"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@drawable/cursor_color"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColorHint="#4B4B4B"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@drawable/cursor_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#4B4B4B"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@drawable/cursor_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#4B4B4B"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textSize="12sp" android:background="@android:color/transparent"
            android:textCursorDrawable="@drawable/cursor_color"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/black_border_rounded_corner"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/repassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="#4B4B4B"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="-5dp"
            android:paddingLeft="20dp"
            android:maxLines="1"
            android:textSize="12sp"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@drawable/cursor_color"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/registerProgress"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/submit"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textSize="15sp"
        android:background="@drawable/blue_border_rounded_corner"
        android:textAllCaps="false" />

</LinearLayout>
